changed font and dark mode fix

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -8,13 +8,13 @@
 }
 
 .logo {
-  height: 6em;
-  padding: 1.5em;
+  height: 10em;
   will-change: filter;
-  transition: filter 300ms;
+  transition: transform 0.3s ease-in-out
 }
 .logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
+  filter: drop-shadow(0 0 2em #b6b6b8aa);
+  transform: scale(1.1)
 }
 .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
